# net

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.cmake
.devcontainer/: Dockerfile  devcontainer.json
examples/: CMakeLists.txt  client.cpp  server.cpp
examples/client/: CMakeLists.txt  client.cpp
examples/linux/async_tcp_server/: CMakeLists.txt  async_tcp_server.cpp
examples/linux/tcp/block/client/: CMakeLists.txt  client.cpp
examples/linux/tcp/block/server/: CMakeLists.txt  server.cpp
examples/linux/tcp/nonblock/server/: CMakeLists.txt  server.cpp
examples/linux/tcp_client/: CMakeLists.txt  tcp_client.cpp
examples/linux/tcp_server/: tcp_server.cpp
examples/server/: CMakeLists.txt  server.cpp  server.cpp2
examples/tcp_client/: tcp_client.cpp
examples/tcp_server/: tcp_server.cpp
examples/win/async_tcp_client/: CMakeLists.txt  async_tcp_client.cpp
examples/win/tcp/nonblock/client/: CMakeLists.txt  client.cpp
examples/win/tcp/nonblock/server/: server.cpp
examples/win/tcp_client/: tcp_client.cpp
examples/win/tcp_server/: CMakeLists.txt  tcp_server.cpp
header/linux/: net_header.hpp
source/: BasicSocket.cpp  BasicSocket.hpp  algo.cpp  algo.hpp  linux_definitions.hpp  main.cp  main.cpp  net.hpp  net_api.cpp  net_api.hpp  net_client.hpp  net_connection.cpp  net_connection.hpp  net_server.cpp  net_server.hpp  socket_context.hpp  socket_definition.hpp  socket_definition.hpp1  win32_definitions.hpp
source/common/: common.cpp  common.hpp
source/exceptions/: SocketException.cpp  SocketException.hpp  net_exception.cpp  net_exception.hpp
source/linux/: NetClient.cpp  NetClient.hpp  NetConnection.cpp  NetConnection.hpp  NetServer.cpp  NetServer.hpp  common_api.hpp  net_common.cpp
source/logger/: logger.hpp
source/win32/: BasicServer.cpp  BasicServer.hpp  NetClient.cpp  NetClient.hpp  NetConnection.cpp  NetConnection.hpp  NetServer.cpp  NetServer.hpp  client_socket.cpp  client_socket.hpp  listening_socket.cpp  listening_socket.hpp  net_client.cpp  net_client.hpp  net_common.cpp  net_connection.cpp  net_connection.hpp  net_server.cpp  net_server.hpp  win32_common_api.cpp  win32_common_api.hpp  win32_definitions.hpp  win32_socket_exceptions.cpp  win32_socket_exceptions.hpp
tests/: CMakeLists.txt
tests/api/: NetMainApiTest.cpp  TCPTest.hpp  TestCommon.cpp
tests/unit/: NetApiTest.cpp  NetExceptionTest.cpp  TestCommon.cpp
tools/: fixgit.sh  x64compile.ps1  x64compile.sh  x64release.ps1  x64release.sh  x86compile.ps1
